--- a/UI/package.json
+++ b/UI/package.json
@@ -37,6 +37,7 @@
     "vue": "2.6.10",
     "vue-async-computed": "^3.9.0",
     "vue-avatar-cropper": "^5.0.2",
+    "vue-i18n": "^8.28.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "websocket-as-promised": "^2.0.1",
