--- a/docs/package.json
+++ b/docs/package.json
@@ -5,16 +5,17 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress-vite build docs",
+    "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
+    "docs:dev": "vuepress-vite dev docs",
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
+    "@vuepress/bundler-vite": "2.0.0-rc.19",
     "@vuepress/theme-default": "^2.0.0-rc.11",
-    "sass-embedded": "^1.79.1",
-    "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7"
+    "sass-embedded": "^1.83.0",
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.19",
+    "vuepress-theme-hope": "2.0.0-rc.66"
   }
 }
