perf: 所有的插件注入改成 ioc 模式

--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -48,6 +48,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\UZonMailUtils\UZonMailUtils.csproj" />
+	  <ProjectReference Include="..\UzonMailDB\UzonMailDB.csproj" />
 	</ItemGroup>
 
 </Project>
