--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<RootNamespace>UZonMail.Core</RootNamespace>
@@ -10,7 +10,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-		<BaseOutputPath>..\..\UZonMailService\bin\x64\Debug\net8.0\Plugins\UZonMailCore</BaseOutputPath>
+		<BaseOutputPath>..\..\UZonMailService\bin\x64\Debug\net9.0\Plugins\UZonMailCore</BaseOutputPath>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
@@ -40,6 +40,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.1" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.22" />
 		<PackageReference Include="Quartz" Version="3.13.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
