--- a/backend-src/UZonMailService/UZonMailService.csproj
+++ b/backend-src/UZonMailService/UZonMailService.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
@@ -9,6 +9,7 @@
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
 		<Platforms>x64</Platforms>
+		<LangVersion>13.0</LangVersion>
 		<FileVersion>0.11.0.0</FileVersion>
 		<AssemblyVersion>0.11.0.0</AssemblyVersion>
 	</PropertyGroup>
