--- a/backend-src/UZonMailUtils/UZonMailUtils.csproj
+++ b/backend-src/UZonMailUtils/UZonMailUtils.csproj
@@ -1,42 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.SDK.Web">
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<RootNamespace>UZonMail.Utils</RootNamespace>
+		<Platforms>x64</Platforms>
+		<OutputType>Library</OutputType>
+		<LangVersion>13.0</LangVersion>
+	</PropertyGroup>
 
-  <PropertyGroup>
-	<TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <RootNamespace>UZonMail.Utils</RootNamespace>
-    <Platforms>x64</Platforms>
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+	<ItemGroup>
+		<Compile Remove="Utils\**" />
+		<Compile Remove="Web\Extensions\**" />
+		<Content Remove="Web\Extensions\**" />
+		<EmbeddedResource Remove="Utils\**" />
+		<EmbeddedResource Remove="Web\Extensions\**" />
+		<None Remove="Utils\**" />
+		<None Remove="Web\Extensions\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Compile Remove="Utils\**" />
-    <Compile Remove="Web\Extensions\**" />
-    <Content Remove="Web\Extensions\**" />
-    <EmbeddedResource Remove="Utils\**" />
-    <EmbeddedResource Remove="Web\Extensions\**" />
-    <None Remove="Utils\**" />
-    <None Remove="Web\Extensions\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="LiteDB" Version="5.0.21" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.9.0" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="LiteDB" Version="5.0.21" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.1.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.9.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Path\" />
+		<Folder Include="Web\Captcha\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Path\" />
-    <Folder Include="Web\Captcha\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Plugins\UzonMailDB\UzonMailDB.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Plugins\UzonMailDB\UzonMailDB.csproj" />
+	</ItemGroup>
 
 </Project>
