--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -35,13 +35,14 @@
     "viewerjs": "^1.11.6",
     "vue": "^3.4.18",
     "vue-cropper": "^1.1.1",
-    "vue-i18n": "^9.2.2",
+    "vue-i18n": "11.0.0-rc.1",
     "vue-router": "^4.0.12",
     "vuedraggable": "^4.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@intlify/vue-i18n-loader": "^4.2.0",
     "@quasar/app-vite": "^2.0.0-beta.1",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
