--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -15,55 +15,56 @@
     "test:unit:ci": "vitest run"
   },
   "dependencies": {
-    "@microsoft/signalr": "^8.0.0",
-    "@quasar/extras": "^1.16.4",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.2.1",
+    "@microsoft/signalr": "^8.0.7",
+    "@quasar/extras": "^1.16.17",
+    "@vueuse/core": "^12.8.2",
+    "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.13",
     "dom-to-image": "^2.6.0",
-    "echarts": "^5.5.0",
-    "element-plus": "^2.6.1",
+    "echarts": "^5.6.0",
+    "element-plus": "^2.9.5",
     "lodash": "^4.17.21",
-    "loglevel": "^1.9.1",
+    "loglevel": "^1.9.2",
     "path-browserify": "^1.0.1",
-    "pinia": "^2.0.11",
-    "primevue": "^3.50.0",
-    "quasar": "^2.6.0",
+    "pinia": "^3.0.1",
+    "primevue": "^4.3.1",
+    "quasar": "^2.18.1",
     "status-code-enum": "^1.0.0",
-    "v-viewer": "^3.0.13",
-    "viewerjs": "^1.11.6",
-    "vue": "^3.4.18",
-    "vue-cropper": "^1.1.1",
-    "vue-i18n": "11.0.0-rc.1",
-    "vue-router": "^4.0.12",
-    "vuedraggable": "^4.1.0",
+    "v-viewer": "^3.0.21",
+    "viewerjs": "^1.11.7",
+    "vue": "^3.5.13",
+    "vue-cropper": "^0.6.5",
+    "vue-i18n": "9.1.11",
+    "vue-router": "^4.5.0",
+    "vuedraggable": "^2.24.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^2.0.0",
+    "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@intlify/vue-i18n-loader": "^4.2.0",
-    "@quasar/app-vite": "^2.0.0-beta.1",
-    "@quasar/quasar-app-extension-testing-unit-vitest": "^1.0.0",
+    "@quasar/app-vite": "^2.1.4",
+    "@quasar/cli": "^2.5.0",
+    "@quasar/quasar-app-extension-testing-unit-vitest": "^1.1.0",
     "@types/crypto-js": "^4.2.2",
     "@types/dom-to-image": "^2.6.7",
-    "@types/lodash": "^4",
-    "@types/node": "^20.5.9",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "@vue/test-utils": "^2.4.4",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.11.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.9",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.21.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.16.2",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-vue": "^10.0.0",
     "mockjs": "^1.1.0",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vitest": "^1.3.1"
+    "typescript": "^5.8.2",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vitest": "^3.0.8"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
