--- a/ui-src/tsconfig.json
+++ b/ui-src/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "@quasar/app-vite/tsconfig-preset",
+  "extends": "./.quasar/tsconfig.json",
   "compilerOptions": {
+    "module": "ES2022",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
       "public/*": ["public/*"]
