--- a/ui-src/.vscode/extensions.json
+++ b/ui-src/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
     "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
     "editorconfig.editorconfig",
     "vue.volar",
     "wayou.vscode-todo-highlight"
@@ -12,3 +13,4 @@
     "ms-vscode.vscode-typescript-tslint-plugin"
   ]
 }
+
