--- a/ui-src/tsconfig.json
+++ b/ui-src/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "./.quasar/tsconfig.json",
-  "compilerOptions": {
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "baseUrl": ".",
-    "paths": {
-      "public/*": ["public/*"]
-    }
-  }
+  // "compilerOptions": {
+  //   "module": "ES2022",
+  //   "moduleResolution": "node",
+  //   "baseUrl": ".",
+  //   "paths": {
+  //     "public/*": ["public/*"]
+  //   }
+  // }
 }
