feat: 增加批量验证、删除无效等接口

--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -7,11 +7,10 @@
 		<OutputType>Library</OutputType>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-		<BaseOutputPath>..\..\UZonMailService\bin\x64\Debug\net9.0\Plugins\UZonMailCore</BaseOutputPath>
+		<BaseOutputPath>..\..\UZonMailService\bin\Debug\net9.0\Plugins\UZonMailCore</BaseOutputPath>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
