--- a/backend-src/UZonMailService/UZonMailService.csproj
+++ b/backend-src/UZonMailService/UZonMailService.csproj
@@ -38,8 +38,9 @@
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="Quartz.AspNetCore" Version="3.13.0" />
-		<PackageReference Include="Quartz.Serialization.Json" Version="3.13.0" />
+		<PackageReference Include="Quartz" Version="3.14.0" />
+		<PackageReference Include="Quartz.AspNetCore" Version="3.14.0" />
+		<PackageReference Include="Quartz.Serialization.Json" Version="3.14.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
