fix: 修复 sqlite 数据库迁移错误

--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Debug": {
+    "Description": "Debug 相关配置",
+    "IsDemo": true
   }
 }
