--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -19,6 +19,10 @@
     "Copyright": "Copyright © 2024 - 2024 UZon Email",
     "ICPInfo": "渝ICP备20246498号-3"
   },
+  "Debug": {
+    "Description": "Debug 相关配置",
+    "IsDemo": false
+  },
   "Resource": {
     "Path": "resource"
   },
