fix: 修复 mysql 数据库初始化异常

--- a/backend-src/UZonMailDB/UzonMailDB.csproj
+++ b/backend-src/UZonMailDB/UzonMailDB.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\MySql\" />
     <Folder Include="SQL\EntityConfigs\Attributes\" />
     <Folder Include="Utils\" />
   </ItemGroup>
