--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -8,5 +8,29 @@
   "Debug": {
     "Description": "Debug 相关配置",
     "IsDemo": true
+  },
+  "Database": {
+    "SqLite": {
+      "Enable": false,
+      "DataSource": "data/db/uzon-mail.db"
+    },
+    "MySql": {
+      "Enable": true,
+      "Version": "8.4.0.0",
+      "Host": "127.0.0.1",
+      "Port": 3306,
+      "Database": "uzon-mail",
+      "User": "uzon-mail",
+      "Password": "uzon-mail",
+      "Description": "程序会优先使用 mysql"
+    },
+    "Redis": {
+      "Enable": false,
+      "Host": "localhost",
+      "Port": 6379,
+      "Password": "",
+      "Database": 0,
+      "Description": "暂不可用"
+    }
   }
 }
