--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -25,12 +25,11 @@
       "Description": "程序会优先使用 mysql"
     },
     "Redis": {
-      "Enable": false,
-      "Host": "localhost",
+      "Enable": true,
+      "Host": "127.0.0.1",
       "Port": 6379,
       "Password": "",
-      "Database": 0,
-      "Description": "暂不可用"
+      "Database": 0
     }
   }
 }
