--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -56,8 +56,7 @@
       "Host": "localhost",
       "Port": 6379,
       "Password": "",
-      "Database": 0,
-      "Description": "暂不可用"
+      "Database": 0
     }
   },
   "Logger": {
