feat: 优化 readme

--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -14,6 +14,7 @@
       "Enable": false,
       "DataSource": "data/db/uzon-mail.db"
     },
+    // The following configuration is for MySQL
     "MySql": {
       "Enable": true,
       "Version": "8.4.0.0",
