--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -1,4 +1,5 @@
 {
+  // 设置日志输出级别
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,26 +7,43 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  // 允许的主机
   "AllowedHosts": "*",
+
+  // 用户登陆后，生成 token 所需参数
+  // 若参数被泄露，别人可以伪造 token 用来登陆
+  // 建议公网部署后，都必须修改 Secrect 值，且长度不小于 32 位
   "TokenParams": {
     "Secret": "640807f8983090349cca90b9640807f8983090349cca90b9",
     "Issuer": "127.0.0.1",
     "Audience": "UZonMail",
     "Expire": 86400000
   },
+
+  // 系统相关信息
+  // 比如系统名称、图标、版权信息、ICP 备案信息
   "System": {
     "Name": "UZonEmail",
     "Icon": "",
     "Copyright": "Copyright © 2024 - 2024 UZon Email",
     "ICPInfo": "渝ICP备20246498号-3"
   },
+
+  // 调试相关配置
   "Debug": {
     "Description": "Debug 相关配置",
+    // 若为 true, 则为演示模式, 不支持上传文件、发送邮件等操作
     "IsDemo": false
   },
+
+  // 资源路径
   "Resource": {
     "Path": "resource"
   },
+
+  // http 设置
+  // 目前未启用
   "Http": {
     "Port": 22345,
     "StaticName": "public",
@@ -33,14 +51,22 @@
     "TokenSecret": "helloworld01",
     "ListenAnyIP": true
   },
+
+  // websocket 设置
   "Websocket": {
     "Port": 22345
   },
+
+  // 数据库设置
+  // 将 Enable 设置为 true, 启用对应的数据库
+  // 程序优化使用 mysql
   "Database": {
+    // 免安装的数据库，系统默认使用这个
     "SqLite": {
       "Enable": true,
       "DataSource": "data/db/uzon-mail.db"
     },
+    // 对于高并发场景，建议使用 mysql
     "MySql": {
       "Enable": false,
       "Version": "8.4.0.0",
@@ -51,6 +77,8 @@
       "Password": "uzon-mail",
       "Description": "程序会优先使用 mysql"
     },
+    // 缓存数据库
+    // 默认使用内存缓存
     "Redis": {
       "Enable": false,
       "Host": "localhost",
@@ -59,25 +87,42 @@
       "Database": 0
     }
   },
+
+  // 日志保存位置
   "Logger": {
     "HttpLogPath": "logs/uzon-mail.http.log",
     "Log4netPath": "logs/uzon-mail.stdout.log"
   },
+
+  // 初始用户设置
   "User": {
+    // 缓存位置
     "CachePath": "users/{0}",
+    // 管理员用户名和密码, 只在第一次启动时初始化
     "AdminUser": {
       "UserId": "admin",
       "Password": "admin1234",
       "Avatar": ""
     },
+    // 新建用户时的默认密码
     "DefaultPassword": "uzonmail123"
   },
+
+  // 当前系统的地址，会同时加入到跨域中
   "Urls": "http://localhost:22345",
+
+  // 跨域设置
+  // 前后端分离、服务器部署时，都需要设置跨域
   "Cors": [ "http://localhost:9000", "https://desktop.uzonmail.com" ],
+
+  // 文件存储设置
   "FileStorage": {
     "DefaultRootDir": "data/object-files"
   },
+
+  // 退订设置
   "Unsubscribe": {
+    // 设置退订的头
     "Headers": [
       {
         "Domain": "gmail.com",
@@ -91,6 +136,8 @@
       }
     ]
   },
+
+  // 定时任务设置
   "Quartz": {
     "document": "https://www.quartz-scheduler.net/documentation/quartz-3.x/packages/microsoft-di-integration.html",
     "quartz.scheduler.instanceName": "Quartz ASP.NET Core Sample Scheduler",
