feat: 添加动态代理有效检测

--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -52,4 +52,10 @@
 	  <ProjectReference Include="..\..\UZonMailUtils\UZonMailUtils.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="data\smtpConfig.txt">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
