fix: 修复数据库升级异常

--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -53,8 +53,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Update="data\HELO.txt">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	  <None Update="data\smtpConfig.txt">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
 
