--- a/ui-src/package.json
+++ b/ui-src/package.json
@@ -21,9 +21,9 @@
     "axios": "^1.8.1",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
-    "dom-to-image": "^2.6.0",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.5",
+    "html-to-image": "^1.11.13",
     "lodash": "^4.17.21",
     "loglevel": "^1.9.2",
     "path-browserify": "^1.0.1",
@@ -47,7 +47,6 @@
     "@quasar/cli": "^2.5.0",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^1.1.0",
     "@types/crypto-js": "^4.2.2",
-    "@types/dom-to-image": "^2.6.7",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.9",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
