fix: 将登陆改成登录

--- a/ui-src/.vscode/settings.json
+++ b/ui-src/.vscode/settings.json
@@ -17,6 +17,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
+  "files.eol": "\r\n",
   "cSpell.words": [
     "autogrow",
     "axios",
