feat: 桌面端增加关闭到托盘

--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -51,6 +51,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
+		<PackageReference Include="Microsoft.Identity.Client" Version="4.72.0" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.23" />
 		<PackageReference Include="Quartz" Version="3.14.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.31" />
