--- a/backend-src/UzonMailDesktop/appsettings.json
+++ b/backend-src/UzonMailDesktop/appsettings.json
@@ -1,3 +1,9 @@
 {
-  "webview2Url": "http://localhost:22345/"
+  "Webview2Url": "http://localhost:22345/",
+
+  // 所需的 .NET 版本，具体到小版本号
+  "DotNETRequired": "9.0.5",
+
+  // 关闭窗体时，是否保留应用程序
+  "KeepBackEndAliveWhenExit": false
 }
