--- a/backend-src/UzonMailDesktop/UzonMailDesktop.csproj
+++ b/backend-src/UzonMailDesktop/UzonMailDesktop.csproj
@@ -6,27 +6,39 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
-		<ApplicationIcon>Src\uzon-mail.ico</ApplicationIcon>
+		<ApplicationIcon>Resource\uzon-mail.ico</ApplicationIcon>
 		<FileVersion>0.14.0.0</FileVersion>
 		<AssemblyVersion>0.14.0.0</AssemblyVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="Src\uzon-mail.ico" />
+		<Content Include="Resource\uzon-mail.ico">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="2.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2849.39" />
+		<PackageReference Include="Stylet" Version="1.3.7" />
 		<PackageReference Include="System.Management" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Update="appsettings.Development.json">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="appsettings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Pages\Welcome\" />
 	</ItemGroup>
 
 </Project>
