fix: 修复获取设置时，字段为 cameCase 匹配错误

--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Debug": {
     "Description": "Debug 相关配置",
-    "IsDemo": false
+    "IsDemo": true
   },
   "Database": {
     "SqLite": {
