--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     # 连接到 uzonmail 主程序网络
     networks:
-      - uzonmail_network
+      - uzon_mysql_network
 
   # redis 缓存, 若要启用 redis 服务，请取消下面的注释
   uzon-redis:
@@ -39,7 +39,7 @@ services:
       - ./data/redis/data:/data # 数据库数据挂载，防止容器重构后数据丢失
     restart: always
     networks:
-      - uzonmail_network
+      - uzon_redis_network
 
   # 程序主体
   uzon-mail:
@@ -53,10 +53,14 @@ services:
       - ./data/app.config.json:/app/wwwroot/app.config.json # 前端配置
     networks:
       - uzonmail_network
+      - uzon_mysql_network
+      - uzon_redis_network
     command: [ "dotnet", "UZonMailService.dll" ]
     depends_on:
       - uzon-mysql
       - uzon-redis
 
 networks:
+  uzon_mysql_network:
+  uzon_redis_network:
   uzonmail_network:
