feat: 更新使用说明

--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -24,9 +24,10 @@
   // 系统相关信息
   // 比如系统名称、图标、版权信息、ICP 备案信息
   "System": {
-    "Name": "UZonEmail",
+    "Name": "宇正群邮",
+    "LoginWelcome": "Welcome to UzonMail",
     "Icon": "",
-    "Copyright": "Copyright © 2024 - 2024 UZon Email",
+    "Copyright": "Copyright © since UZon Email",
     "ICPInfo": "渝ICP备20246498号-3"
   },
 
