--- a/backend-src/UZonMailUtils/UZonMailUtils.csproj
+++ b/backend-src/UZonMailUtils/UZonMailUtils.csproj
@@ -27,6 +27,7 @@
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.6.1" />
 		<PackageReference Include="MimeKit" Version="4.11.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="StackExchange.Redis" Version="2.8.16" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
 	</ItemGroup>
