--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -43,13 +43,15 @@
     "Path": "resource"
   },
 
+  // 后端 api 的基础 URL
+  // 若是部署到公网服务器上，建议修改为对应的域名
+  "BaseUrl": "http://localhost:22345",
+
   // http 设置
-  // 目前未启用
   "Http": {
     "Port": 22345,
     "StaticName": "public",
     "BaseRoute": "/api/v1",
-    "TokenSecret": "helloworld01",
     "ListenAnyIP": true
   },
 
@@ -108,9 +110,6 @@
     // 新建用户时的默认密码
     "DefaultPassword": "uzonmail123"
   },
-
-  // 当前系统的地址，会同时加入到跨域中
-  "Urls": "http://localhost:22345",
 
   // 跨域设置
   // 前后端分离、服务器部署时，都需要设置跨域
