--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -32,5 +32,11 @@
       "Password": "",
       "Database": 0
     }
+  },
+  // 设置 Outlook 授权参数
+  "MicrosoftEntraApp": {
+    "ClientId": "YourClientId",
+    "TenantId": "",
+    "ClientSecret": "YourClienSecret"
   }
 }
