--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -137,6 +137,13 @@
     ]
   },
 
+  // 用于设置 Outlook 授权参数
+  "MicrosoftEntraApp": {
+    "ClientId": "",
+    "TenantId": "",
+    "ClientSecret": ""
+  },
+
   // 定时任务设置
   "Quartz": {
     "document": "https://www.quartz-scheduler.net/documentation/quartz-3.x/packages/microsoft-di-integration.html",
