--- a/backend-src/UZonMailService/UZonMailService.csproj
+++ b/backend-src/UZonMailService/UZonMailService.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Remove="appsettings.Development.json" />
 		<Content Remove="log4net.config" />
 	</ItemGroup>
 
@@ -47,6 +48,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="appsettings.Development.json" />
 		<None Include="log4net.config">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
