--- a/docs/package.json
+++ b/docs/package.json
@@ -16,5 +16,8 @@
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.19",
     "vuepress-theme-hope": "2.0.0-rc.66"
+  },
+  "dependencies": {
+    "@waline/client": "^3.5.7"
   }
 }
