perf: 优化编译脚本

--- a/backend-src/UZonMailService/UZonMailService.csproj
+++ b/backend-src/UZonMailService/UZonMailService.csproj
@@ -26,6 +26,7 @@
 
 	<ItemGroup>
 		<Content Remove="appsettings.Development.json" />
+		<Content Remove="appsettings.Production.json" />
 		<Content Remove="log4net.config" />
 	</ItemGroup>
 
@@ -48,7 +49,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="appsettings.Development.json" />
+		<None Include="appsettings.Production.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Include="appsettings.Development.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 		<None Include="log4net.config">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
