feat: 添加 PostgreSQL 数据库支持

--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -65,9 +65,19 @@
   // 程序优化使用 mysql
   "Database": {
     // 免安装的数据库，系统默认使用这个
+    // 优先级 3
     "SqLite": {
       "Enable": true,
       "DataSource": "data/db/uzon-mail.db"
+    },
+    "PostgreSql": {
+      "Enable": false,
+      "Host": "",
+      "Port": 3306,
+      "Database": "uzon-mail",
+      "User": "uzon-mail",
+      "Password": "uzon-mail",
+      "Description": "优先级 1"
     },
     // 对于高并发场景，建议使用 mysql
     "MySql": {
@@ -78,7 +88,7 @@
       "Database": "uzon-mail",
       "User": "uzon-mail",
       "Password": "uzon-mail",
-      "Description": "程序会优先使用 mysql"
+      "Description": "优先级 2"
     },
     // 缓存数据库
     // 默认使用内存缓存
