feat: 添加 postgreSQL 支持

--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -70,20 +70,21 @@
       "Enable": true,
       "DataSource": "data/db/uzon-mail.db"
     },
+    // 对于高并发场景，建议使用 PostgreSql 或 mysql
     "PostgreSql": {
       "Enable": false,
-      "Host": "",
-      "Port": 3306,
+      "Host": "127.0.0.1",
+      "Port": 5432,
       "Database": "uzon-mail",
       "User": "uzon-mail",
       "Password": "uzon-mail",
       "Description": "优先级 1"
     },
-    // 对于高并发场景，建议使用 mysql
+    // 对于高并发场景，建议使用 PostgreSql 或 mysql
     "MySql": {
       "Enable": false,
       "Version": "8.4.0.0",
-      "Host": "",
+      "Host": "127.0.0.1",
       "Port": 3306,
       "Database": "uzon-mail",
       "User": "uzon-mail",
