fix: 修复收件人名称变量异常的bug

--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -8,7 +8,7 @@
   "Debug": {
     "Description": "Debug 相关配置",
     "IsDemo": false, // 是否为演示模式
-    "PreventSending": false // 阻止发送邮件
+    "PreventSending": true // 阻止发送邮件
   },
   "Database": {
     "SqLite": {
