--- a/ui-src/.vscode/settings.json
+++ b/ui-src/.vscode/settings.json
@@ -14,6 +14,7 @@
   "editor.codeActionsOnSave": ["source.fixAll.eslint"],
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue"],
   "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.format.semicolons": "remove",
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
@@ -31,3 +32,4 @@
     "viewsource"
   ]
 }
+
