--- a/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
+++ b/backend-src/Plugins/UZonMailCorePlugin/UZonMailCorePlugin.csproj
@@ -37,6 +37,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Services\LLM\" />
 		<Folder Include="Utils\Attributes\" />
 		<Folder Include="Utils\Helpers\" />
 	</ItemGroup>
@@ -52,6 +53,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.2" />
 		<PackageReference Include="Microsoft.Identity.Client" Version="4.72.0" />
+		<PackageReference Include="OpenAI" Version="2.5.0" />
 		<PackageReference Include="Quartz" Version="3.14.0" />
 		<PackageReference Include="StackExchange.Redis" Version="2.8.31" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.1" />
