--- a/backend-src/UZonMailService/appsettings.Development.json
+++ b/backend-src/UZonMailService/appsettings.Development.json
@@ -14,6 +14,7 @@
     "SqLite": {
       "Enable": true,
       "DataSource": "data/db/uzon-mail.db"
+      //"DataSource": "C:/Users/galens/Desktop/temp/uzon-mail.db"
     },
     // postgre 数据库
     "PostgreSql": {
