feat: Add AI Copilot functionality for email generation and enhancement
- Introduced configuration for AI prompts in appsettings.json.
- Implemented AppSettings and AppSettingsHelper for better configuration management.
- Created DTOs for email body data, subject generation, and user prompts.
- Developed EmailCopilotController to handle email body generation and enhancement requests.
- Added AiCopilotService to interact with AI clients for generating email content.
- Defined AiPrompts class for managing AI prompt templates.
- Implemented caching for chat clients to optimize performance.
- Enhanced service registration utilities for better dependency injection.

--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -207,5 +207,15 @@
     "quartz.dataSource.sqlLite.connectionString": "Data Source=data/db/quartz-sqlite.sqlite3",
     "quartz.dataSource.sqlLite.provider": "SQLite-Microsoft",
     "quartz.jobStore.performSchemaValidation": false
+  },
+
+  // AI 助手配置
+  // AI assistant configuration
+  "AiCopilot": {
+    "Prompts": {
+      //"EmailBodyGeneration": "",
+      //"EmailBodyEnhancement": "",
+      //"SubjectsSummary": ""
+    }
   }
 }
