fix: variables in execel data do not be valuable in runtime

--- a/backend-src/UZonMailService/appsettings.json
+++ b/backend-src/UZonMailService/appsettings.json
@@ -213,6 +213,7 @@
   // AI assistant configuration
   "AiCopilot": {
     "Prompts": {
+      // remove the comments below and set your custom prompts if needed
       //"EmailBodyGeneration": "",
       //"EmailBodyEnhancement": "",
       //"SubjectsSummary": ""
