feat: 更新版本号至0.20.4.0，添加新版本可用提示，优化邮件发送状态和连接安全性枚举

--- a/ui-src/.vscode/settings.json
+++ b/ui-src/.vscode/settings.json
@@ -25,6 +25,7 @@
     "ciphertext",
     "Cooldown",
     "dbclick",
+    "echarts",
     "loglevel",
     "Onebot",
     "retcode",
@@ -33,7 +34,8 @@
     "uyoufu",
     "uzon",
     "viewerjs",
-    "viewsource"
+    "viewsource",
+    "vueuse"
   ]
 }
 
