--- a/backend-src/UZonMailService/UZonMailService.csproj
+++ b/backend-src/UZonMailService/UZonMailService.csproj
@@ -9,7 +9,7 @@
 		<ServerGarbageCollection>false</ServerGarbageCollection>
 		<ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
 		<LangVersion>13.0</LangVersion>
-		<FileVersion>0.20.4.0</FileVersion>
+		<FileVersion>0.20.4.0</FileVersion>git 
 		<AssemblyVersion>0.20.4.0</AssemblyVersion>
 	</PropertyGroup>
 
